# Delft3D

./: .fprettify.rc  .gitignore  CMakeLists.txt  CMakeLists.txt~  CMakePresets.json  README.md  build.bat  build.sh  build_alma8.sh  build_test.bat  build_wsl.sh  buildcmake.bat  conanfile.py  convert_to_free_format.sh  gcc_conversion_raw_notes.md  preCICE_DIMR_requirements_highlevel_summary.md  preCICE_Executive_Summary.md  testcmake.bat
.devcontainer/delft3d/: Dockerfile  README.md  devcontainer.json
.devcontainer/delft3d/scripts/: post_create_command.sh
.dvc/: config
.github/workflows/: get-aggregate-teamcity-build-status.yml  schedule_interaction_limit.yml
ci/DIMRset_delivery/src/: DIMRset-binaries.json  DimrAutomation.py  all-testbench-binaries.json  d3d4-suite-binaries.json  dimr_context.py  fm-suite-binaries.json  print_signing.py  teamcity_retrieve_engine_test_status_dpc.py
ci/Dimr_TestbenchMatrix/: settings.kts
ci/dockerfiles/: Dockerfile-dhydro
ci/dockerfiles/linux/: README.md  buildtools.Dockerfile  ctest.Dockerfile  dimrset.Dockerfile  python311.Dockerfile  third-party-libs.Dockerfile
ci/dockerfiles/windows/: Dockerfile-dhydro-test-environment  buildtools.Dockerfile  ctest.Dockerfile  set-env-vs2022.cmd
ci/github/: get_aggregate_teamcity_build_status.sh
ci/nuget/Dimr.Libs/: Dimr.Libs.nuspec
ci/nuget/ECModule.Native/: ECModule.Native.nuspec
ci/nuget/GridGeom.Native/: GridGeom.Native.nuspec
ci/python/: pyproject.toml
ci/teamcity/Delft3D/: copyExamples.kt  dimrbak.kt  publish.kt  publishAggregateStatus.kt  publishToGui.kt  settings.kts  trigger.kt
ci/teamcity/Dimr_Testbench/: LinuxAll.kt  LinuxTestTemplate.kt  settings.kts
ci/teamcity/Dimr_TestbenchMatrix/: dockerLinuxBuild.kt  linux.kt  linux_approve.kt  settings.kts  trigger.kt  windows.kt  windows_approve.kt
ci/teamcity/Verschilanalyse/: StartVerschilanalyse.kt
ci/teamcity/scripts/: check_scope.py
ci/teamcity/signing/: sign.kt
doc/: compiling.md  compiling_Linux.md  compiling_Windows.md  contributing.md  development.md  unit-testing.md
examples/: readme.txt  run.bat  run.sh  run_all_examples.bat  run_all_examples.sh  run_docker.sh
examples/01_dflowfm_sequential/: run.bat
examples/02_dflowfm_parallel/: run.bat  submit.sh
examples/04_dflowfm_dwaq_parallel/: run.bat
examples/06_dflowfm_dwaq-BLOOM_parallel/: run.bat
examples/09_dflowfm_parallel_dwaves/: run.bat  submit.sh
examples/10_dflowfm_sequential_drtc_dwaves/: submit.sh
examples/11_dflowfm_parallel_drtc_dwaves/: run.bat  submit.sh
examples/delft3d4/01_standard/: run.bat  run_parallel.bat
examples/delft3d4/02_domaindecomposition/: run.sh
examples/delft3d4/03_flow-wave/: run.bat  run.sh  run_parallel.bat
examples/delft3d4/04_fluidmud/: run.bat  run.sh
examples/delft3d4/06_delwaq/: run.bat  run.sh
examples/delft3d4/07_wave/: run.bat  run.sh
examples/delft3d4/08_part-tracer/: fti_tracer.inp  run.bat  run.sh
examples/delft3d4/09_part-oil/: run.bat  run.sh
examples/delft3d4/10_delwaq-part-tracer/: run.bat  run.sh
examples/dflowfm/01_dflowfm_sequential/: dimr_config.xml  precice_config.xml  run_apptainer.sh  run_docker.sh
examples/dflowfm/02_dflowfm_parallel/: dimr_config.xml  precice_config.xml  run_apptainer.sh  run_parallel.bat
examples/dflowfm/03_dflowfm_dwaq_sequential/: run_apptainer.sh
examples/dflowfm/04_dflowfm_dwaq_parallel/: dimr_config.xml  run_apptainer.sh  run_parallel.bat
examples/dflowfm/05_dflowfm_dwaq-BLOOM_sequential/: dimr_config.xml  run.sh  run_apptainer.sh
examples/dflowfm/06_dflowfm_dwaq-BLOOM_parallel/: dimr_config.xml  run.sh  run_parallel.bat
examples/dflowfm/07_dwaves/: precice_config.xml
examples/dflowfm/08_dflowfm_sequential_dwaves/: precice_config.xml  run_apptainer.sh  run_precice.sh
examples/dflowfm/09_dflowfm_parallel_dwaves/: precice_config.xml  run_apptainer.sh  run_parallel.bat
examples/dflowfm/10_dflowfm_sequential_drtc_dwaves/: dimr_config.xml  run.bat  run.sh  run_apptainer.sh
examples/dflowfm/11_dflowfm_parallel_drtc_dwaves/: run.sh  run_apptainer.sh  run_parallel.bat
examples/dflowfm/12_dflowfm_waves_sinterklaas/: .gitignore  dimr_config.xml  precice_config.xml
greeter_dummy/: CMakeLists.txt  README.md  greeter_dummy.cpp
hooks/: pre-commit.sh
mermaid/: planning.md
scripts/: install-hooks.ps1  install-hooks.sh
src/: setenv.sh  vars.bat
src/cmake/: CMakeLists.txt  dependencies.cmake  functions.cmake  linux_scripts.cmake  modules.cmake
src/cmake/compiler_options/: automatic_conversions.cmake  compiler_warning_targets.cmake  gnu.cmake  intel.cmake
src/cmake/configurations/: .dwaq_configuration.cmake.un~  all_configuration.cmake  d_hydro_configuration.cmake  delft3d4_configuration.cmake  delft3dfm_configuration.cmake  dflowfm_configuration.cmake  dimr_configuration.cmake  drr_configuration.cmake  dwaq_configuration.cmake  dwaq_configuration.cmake~  dwaves_configuration.cmake  flow1d2d_configuration.cmake  flow1d_configuration.cmake  flow2d3d_configuration.cmake  (+6 more)
src/third_party_open/blas/cmake_deltares/: CMakeLists.txt
src/third_party_open/clipper/cmake_deltares/: CMakeLists.txt
src/third_party_open/googletest/: CMakeLists.txt
src/third_party_open/intelredist/: CMakeLists.txt
src/third_party_open/microsoftredist/: CMakeLists.txt
src/third_party_open/precice/: CMakeLists.txt  precice.F90
src/tools_gpl/waq_tools/maptonetcdf/: CMakeLists.txt  maptonetcdf.f90
test/deltares_testbench/: .gitignore  README.md  SYMLINK  TestBench.py  command.txt  download_minio.py  pyproject.toml  run_testbank_v3.bat
tools/com_precice_comparer/: compare_netcdf_precice.py  inspect_vtu.py  requirements.txt
tools/conan_recipes/: conanfile.py
tools/deltares_fortran_styler/: array_delimiter_converter.py  convert_double.py  double_precision_converter.py  pyproject.toml
tools/deltares_fortran_styler/tests/: test_array_delimiter_converter.py  test_double_precision_converter.py
tools/double_precision_conversion/: convert_double.py
tools/fprettify/: run_fprettify.sh
tools/warnings_as_errors/: fortran_warnings_as_errors.py
(+1926 files in other folders)
